--- a/src/app/shared/components/login/login.component.html
+++ b/src/app/shared/components/login/login.component.html
@@ -1,22 +1,20 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 offset-3">
-            <form [formGroup]="signIn" (ngSubmit)="onloginSubmit()">
+<div class="container ">
+    <div class="row ">
+        <div class="col-md-6 offset-3 ">
+            <form [formGroup]="signIn" (ngSubmit)="onloginSubmit()"
+                class="border border-dark p-5 shadow p-3 mb-5 bg-black rounded">
                 <div class="form-group">
-            
-                    <label for="username">username</label>
+                    <label for="username">UsersName*</label>
                     <input type="text" class="form-control" formControlName="username">
                 </div>
                 <div class="form-group">
-            
-                    <label for="password">password</label>
-                    <input type="text" class="form-control" formControlName="password">
+                    <label for="password">Password*</label>
+                    <input type="password" class="form-control" formControlName="password">
                 </div>
                 <div class="text-right">
                     <button class="btn btn-primary">login</button>
                 </div>
             </form>
-
         </div>
     </div>
 </div>
