--- a/src/app/shared/components/order/order.component.html
+++ b/src/app/shared/components/order/order.component.html
@@ -1,4 +1,142 @@
-<div class="container ">
+<div class="container mt-5">
+    <div class="d-flex justify-content-between">
+        <label for="username">User Name :<strong>{{UsersName}}</strong> </label>
+        <button class="btn btn-outline-danger" (click)="  isLogout()">LogOut</button>
+    </div>
+    <form [formGroup]="tableForm" (ngSubmit)="onSubmit()" class="mt-3">
+        <div class="form-row">
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="name">Name: </label>
+                    <input type="text" class="form-control" formControlName="name">
+                    <ng-container *ngIf="tableForm.controls['name'].touched || tableForm.controls['name'].dirty && tableForm.controls['name'].invalid">
+                        <small class="alert alert-info text-danger d-inline-block mt-2" *ngIf="tableForm.controls['name'].hasError('required')">name is required</small>
+                        <small class="alert alert-warning text-dark d-inline-block mt-2" *ngIf="tableForm.controls['name'].hasError('minlength')">Minimum characters to be entered are 
+                          {{tableForm.controls['name'].errors?.['minlength'].requiredLength}}
+                        </small>
+                        <small class="alert alert-warning text-dark d-inline-block mt-2" *ngIf="tableForm.controls['name'].hasError('maxlength')">Minimum characters to be entered are 
+                          {{tableForm.controls['name'].errors?.['maxlength'].requiredLength}}
+                        </small>
+                    </ng-container>
+                    <!-- <ng-container *ngIf="tableForm.controls['name'].dirty && tableForm.controls['name'].invalid">
+                        <p class="text-danger" *ngIf="tableForm.controls['name'].hasError('minlength')"> min length
+                            {{tableForm.controls['name'].errors?.['minlength'].requiredLength}}</p>
+                        <p class="text-danger" *ngIf="tableForm.controls['name'].hasError('maxlength')">max lenth 40
+                            numbers</p>
+                    </ng-container> -->
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="date"> Date</label>
+                    <input type="date" class="form-control" formControlName="date">
+                </div>
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="mobile">Mobile No : </label>
+                    <input type="text" class="form-control" formControlName="mobile">
+                    <ng-container *ngIf="tableForm.controls['mobile'].touched || tableForm.controls['mobile'].dirty && tableForm.controls['mobile'].invalid">
+                        <small class="alert alert-warning text-dar mt-2" *ngIf="tableForm.controls['mobile'].hasError('pattern')" [ngClass]="{'d-inline-block': true} ">Only numbers are allowed
+                          
+                        </small>
+                        <small class="alert alert-info text-danger mt-2 d-inline-block" *ngIf="tableForm.controls['mobile'].hasError('required')">Mobile number is required</small>
+                        <small class="alert alert-warning text-dark mt-2 d-inline-block" *ngIf="tableForm.controls['mobile'].hasError('minlength')">Minimum 
+                          {{tableForm.controls['mobile'].errors?.['minlength'].requiredLength}} digits required
+                        </small>
+                        <small class="alert alert-warning text-dark mt-2 d-inline-block" *ngIf="tableForm.controls['mobile'].hasError('maxlength')">Minimum  
+                          {{tableForm.controls['mobile'].errors?.['maxlength'].requiredLength}} digits required
+                        </small>
+                    </ng-container>
+                    <!-- <ng-container *ngIf="tableForm.controls['mobile'].dirty && tableForm.controls['mobile'].invalid">
+                        <p class="text-danger" *ngIf="tableForm.controls['mobile'].hasError('minlength')"> min length
+                            {{tableForm.controls['mobile'].errors?.['minlength'].requiredLength}}</p>
+                        <p class="text-danger" *ngIf="tableForm.controls['mobile'].hasError('maxlength')">max lenth 10
+                            numbers</p>
+                    </ng-container> -->
+                </div>
+            </div>
+            <div class="col-6">
+                <div class="form-group">
+                    <label for="email"> Email Id</label>
+                    <input type="email" class="form-control" formControlName="email">
+                    <ng-container *ngIf="tableForm.controls['email'].touched || tableForm.controls['email'].dirty && tableForm.controls['email'].invalid">
+                        <small class="alert alert-info text-danger" *ngIf="tableForm.controls['email'].hasError('required')">Email is required</small>
+                        <small class="alert alert-warning text-dark d-inline-block mt-2" *ngIf="tableForm.controls['email'].hasError('email')">Invalid email format 
+                          {{tableForm.controls['email'].errors?.['email']}}
+                        </small>
+                        <!-- <small class="alert alert-warning text-dark d-inline-block mt-2" *ngIf="tableForm.controls['name'].hasError('maxlength')">Minimum characters to be entered are 
+                          {{tableForm.controls['name'].errors?.['maxlength'].requiredLength}}
+                        </small> -->
+                    </ng-container>
+                    <!-- <ng-container *ngIf="tableForm.controls['email'].dirty && tableForm.controls['email'].invalid">
+                        <p class="text-danger" *ngIf="tableForm.controls['email'].hasError('email')">Email not valid
+                            {{tableForm.controls['email'].errors?.['email']}}</p>
+                    </ng-container> -->
+                </div>
+            </div>
+        </div>
+        <!-- <div class="row text-capitalize mt-5 mb-5">
+            <div class="col-md-6">
+
+
+                
+            </div>
+            <div class="col-md-6">
+                <div class="text-right">
+
+                </div>
+
+                
+            </div>
+        </div> -->
+        <table class="table table-bordered mt-3">
+            <thead>
+                <tr>
+                    <th>Action</th>
+                    <th>Id</th>
+                    <th>Code</th>
+                    <th>Rate</th>
+                    <th>Quantity</th>
+                    <th>Value</th>
+                </tr>
+            </thead>
+            <tbody>
+                <ng-container formArrayName="rows">
+                    <tr *ngFor="let row of rowArray.controls; let i=index">
+                        <ng-container [formGroupName]="i">
+                            <td><button class="btn btn-danger" type="button" (click)="onDelete(i)">delete</button></td>
+                            <td><input type="text" formControlName="id" #keys (keyup)="keyUp(keys)"></td>
+                            <td><input type="text" formControlName="code" readonly placeholder="readonly"></td>
+                            <td><input type="text" formControlName="rate" #rates></td>
+                            <td><input type="text" formControlName="quantity" #qty></td>
+                            <td> {{ value[i] }}</td>
+                        </ng-container>
+                    </tr>
+                </ng-container>
+            </tbody>
+        </table>
+        <div class="d-flex justify-content-between">
+            <div>
+                <button type="button" (click)="addRow()" class="btn btn-success">Add</button>
+            </div>
+            <div class="text-capitalize">
+                <p>Total Qty : {{qty}}</p>
+                <p>Total Value : {{totalValue}}</p>
+                <p>Discount : <input type="number" (change)="refreshInvAmt(disc)" #disc formControlName="discount"></p>
+                <p>Invoice Amount : {{invoiceAmount}}</p>
+            </div>
+        </div>
+        <div class="text-center">
+            <button class="btn btn-primary mr-3" type="submit" >Submit</button>
+            <button class="btn btn-danger" type="button" (click)="onclick()">Cancel</button>
+        </div>
+    </form>
+</div>
+
+<!-- <div class="container ">
     <form [formGroup]="tableForm" (ngSubmit)="onSubmit()">
         <div class="row text-capitalize mt-5 mb-5">
             <div class="col-md-6">
@@ -62,7 +200,7 @@
                     </tr>
                 </ng-container>
             </tbody>
-        </table>
+        </table> 
         <div>
             <button type="button" (click)="addRow()" class="btn btn-success">Add row</button>
         </div>
@@ -74,12 +212,42 @@
             <p> invoiceAmount : {{invoiceAmount}}</p>        
         </div>
         <div class="text-center">
-            <button class="btn btn-primary mr-3" type="submit " [disabled] = "discount">Submit</button>
+            <button class="btn btn-primary mr-3" type="submit ">Submit</button>
             <button class="btn btn-danger" type="button" (click)="onclick()">Cancel</button>
         </div>
     </form>
+</div> -->
+
+<div class="container border border-primary showData mt-5">
+    <strong>Order Summary:</strong>
+    <div class="card text-capitalize border-0" *ngIf="inputData">
+        &#123;
+        <div class="card-body">
+            <p><strong>name:</strong>{{inputData.name}}</p>
+            <p><strong>date:</strong>{{inputData.date}}</p>
+            <p><strong>mobile:</strong>{{inputData.mobile}}</p>
+            <p><strong>email:</strong>{{inputData.email}}</p>
+            <p><strong>totalQuantity:</strong>{{inputData.totalQty}}</p>
+            <p><strong>totalValue:</strong>{{inputData.totalValue}}</p>
+            <p><strong>discount:</strong>{{inputData.discount}}</p>
+            <p> <strong>invoice Amount :</strong> {{inputData.invoiceAmt}}</p>
+            <strong>products : </strong> [
+            <ng-container *ngFor="let s of inputData.products; let i= index">
+                &#123;
+                <p><strong>id :</strong> {{s.id}}</p>
+                <p> <strong>code :</strong> {{s.code}}</p>
+                <p><strong>rate :</strong>
+                    {{s.rate}}</p>
+                <p><strong>quantity :</strong> {{s.quantity}}</p>
+                &#125;<span *ngIf="!(i >= inputData.products.length-1)">,</span>
+            </ng-container>
+
+            ]
+        </div>
+        &#125;
+    </div>
 </div>
-<div class="showData mt-5">
+<!-- <div class="showData mt-5">
     <div class="card text-capitalize" *ngFor="let s of inputData">
         <div class="card-body">
             <p><strong>name:</strong>{{s.name}}</p>
@@ -91,8 +259,8 @@
             <p> <strong>code :</strong>  {{nextArr.code}}</p>
             <p><strong>rate :</strong>
                    {{nextArr.price}}</p>
-            <p><strong>quantity :</strong>  {{nextArr.quantity}}</p>
-            <p> <strong>value :</strong>   {{invoiceAmount}}</p>]
+            <p><strong>quantity :</strong> {{nextArr.quantity}}</p>
+            <p> <strong>value :</strong> {{invoiceAmount}}</p>]
         </div>
     </div>
-</div>
+</div> -->
